# embedbase

./: .dockerignore  .gitignore  .gitpod.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  api.py  config.example.yaml  docker-compose-dev.yml  docker-compose-postgres-standalone.yml  docker-compose-postgres.yml  docker-compose.yml  main.py  manifest.json  models.py  optional-requirements.txt  pyproject.toml  render.yaml  requirements-test.txt  requirements.txt  service.dev.yaml  service.prod.yaml  setup.py  test_main.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  question.md
.github/workflows/: api.yaml  ci.yaml  ci_core.yml  ci_js.yml  ci_py.yml  greetings.yml  image.yaml  index.yaml  release_core.yml  release_hosted.yml  release_js.yml  release_py.yml  supabase.yaml
.well-known/: ai-plugin.json  openapi.yaml
dashboard/: .env.example  .gitignore  .vercelignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  prettier.config.js  sentry.client.config.js  sentry.edge.config.js  sentry.properties  sentry.server.config.js  tailwind.config.js  tsconfig.json  vercel.json
dashboard/app/: augment-search.tsx  layout.tsx
dashboard/components/: APIKeys.tsx  Account.tsx  AuthButtons.tsx  Banner.tsx  Breadcrumbs.tsx  Button.tsx  Card.tsx  ChatBox.tsx  ChatSkeleton.tsx  CommunityHubButton.tsx  CopyToClipboard.tsx  Dashboard.tsx  DataLoader.tsx  DatasetList.tsx  EmptyStateCreateAPIKey.tsx  FileDataLoader.tsx  Footer.tsx  GenerateCode.tsx  GithubDataLoader.tsx  Input.tsx  Layout.tsx  LoginForm.tsx  Markdown.tsx  Navbar.tsx  PricingSection.tsx  PrivateChat.tsx  Sandbox.tsx  Search.tsx  ShareModal.tsx  SignupForm.tsx  SmartChat.tsx  Spinner.tsx  SubmitIcon.tsx  SystemMessage.tsx  TextField.tsx  Usage.tsx  User.tsx  sandpack-styles.tsx  supabase-listener.tsx  supabase-provider.tsx
dashboard/hooks/: useDatasets.ts  useInterval.ts
dashboard/lib/: apiMiddleware.ts  cache.ts  chatMiddleware.ts  claude.ts  getApiKey.ts  getEmbedbaseApp.ts  github.ts  store.ts  supabase-browser.ts  supabase-server.ts  upstash.ts  utils.ts
dashboard/pages/: _app.tsx  index.tsx  login.tsx  signup.tsx
dashboard/playgrounds/: AddToCollection.tsx  Base.tsx  SearchCollection.tsx
dashboard/styles/: globals.css
dashboard/utils/: OpenAIStream.ts  array.ts  constants.ts  cors.ts  hasSessionMiddleware.ts  helpers.ts  retry.ts  stripe-client.ts  stripe.ts  supabase-admin.ts  template.ts  types.ts  types_db.ts  useUser.tsx  vectors.ts
docker/: Dockerfile  Dockerfile.dev  docker-entrypoint.sh
docs/: .env.example  .gitignore  .gitpod.yml  DEPLOYMENT.md  LICENSE  README.md  next-sitemap.config.js  next.config.js  package-lock.json  package.json  postcss.config.js  prettier.config.js  tailwind.config.js  theme.config.tsx  tsconfig.json
docs/components/: Button.tsx  Markdown.tsx  Search.tsx
docs/lib/: ip-rate-limit.ts  rate-limit.ts  upstash.ts
docs/pages/: 404.mdx  500.mdx  _app.mdx  _meta.json  auth.mdx  dashboard.mdx  document-is-too-long.mdx  examples.mdx  how-it-works.mdx  index.mdx  interface.mdx  sdk-py.mdx  sdk.mdx  self-hosting.mdx  snippets.mdx  tutorials.mdx
docs/pages/api/: ask.ts  (+2 more)
docs/scripts/: sync.ts
docs/utils/: OpenAIStream.ts
embedbase/: __init__.py  __main__.py  api.py  app.py  db.py  db_utils.py  embeddings.py  firebase_auth.py  logging_utils.py  middleware_utils.py  models.py  pinecone_db.py  settings.py  strings.py  supabase_auth.py  supabase_db.py  test_auth.py  test_db.py  test_embeddings.py  test_end_to_end.py  test_main.py  test_pinecone_db.py  test_supabase_db.py  test_utils.py  utils.py  weaviate_db.py
embedbase/database/: __init__.py  base.py  db_utils.py  memory_db.py  pinecone_db.py  postgres_db.py  supabase_db.py  weaviate_db.py
embedbase/databases/: __init__.py  db_utils.py  pinecone_db.py  postgres_db.py  supabase_db.py  test_db.py  weaviate_db.py
embedbase/embedding/: __init__.py  base.py  cohere.py  openai.py
examples/: README.md
examples/simple-react/: README.md  docker-compose.yml  package-lock.json  package.json
examples/simple-react-auth/: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
examples/simple-react-custom-middleware/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt
functions/: main.py  requirements.txt  test_main.py
hosted/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bump.py  docker-compose-prod.yaml  docker-compose.yaml  docker-entrypoint.sh  main.py  requirements-test.txt  requirements.txt  service.dev.yaml  service.prod.yaml  version.py
hosted/scripts/: main.py
hosted/tests/: test_auth_api_key.py
integrations/zapier/: .zapierapprc  authentication.js  index.js  package.json
notebooks/: Embedbase_Getting_started.ipynb
scripts/: supabase.py
sdk/embedbase-js/: .gitignore  .gitpod.yml  .npmignore  .releaserc.json  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.module.json
sdk/embedbase-py/: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
sdk/embedbase-py/embedbase_client/: __init__.py  __main__.py  async_client.py  base.py  client.py  errors.py  model.py  split.py  sync_client.py  types.py  utils.py
sdk/embedbase-py/tests/: test_client.py  test_client_int.py  test_split.py  test_utils.py
sdk/embedbase-py/tests/test_example/: test_hello.py
search/: Dockerfile  api.py  db.py  models.py  pinecone_db.py  pub_sub.py  settings.py  test_main.py  utils.py  weaviate_db.py
search/plugins/: README.md
search/test_data/: upload.json
supabase/: .env.example  README.md  config.toml
supabase/migrations/: 20230325092733_create_documents_table.sql  20230325093111_create_extensions_vector.sql  20230325093148_create_row_level_security_documents_table.sql  (+6 more)
sync/: .gitignore  index.html  index.js  package-lock.json  package.json
tests/: test_auth.py  test_end_to_end.py  test_utils.py
(+117 files in other folders)
